[gd_scene load_steps=5 format=3 uid="uid://drusmosqt1dag"]

[ext_resource type="Texture2D" uid="uid://b1jwh23dayqxc" path="res://assets/wallpapergodot.jpeg" id="1_pufjf"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="2_miynk"]
[ext_resource type="FontFile" uid="uid://barbabfpjkm12" path="res://assets/fonts/Holysweet-rgn4K.otf" id="3_2ru3n"]

[sub_resource type="LabelSettings" id="LabelSettings_18qb1"]
font = ExtResource("3_2ru3n")
font_size = 66

[node name="Background" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pufjf")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_miynk")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Menu/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Cooking Game"
label_settings = SubResource("LabelSettings_18qb1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_2ru3n")
theme_override_font_sizes/font_size = 44
text = "Play"

[node name="ButtonHTP" type="Button" parent="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_2ru3n")
theme_override_font_sizes/font_size = 44
text = "How To Play"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_2ru3n")
theme_override_font_sizes/font_size = 44
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="CanvasLayer/Menu" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonHTP" to="CanvasLayer/Menu" method="_on_button_htp_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer/Menu" method="_on_button_quit_pressed"]
